--- a/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/digital-numerique/last-of-the-big-tuskers/index.html
@@ -117,34 +117,36 @@
     </a>
   </div>
 
-  <section class="single">
-    <div class="gutter-small clear-top clear-bottom polyptych ptych-fixed" id="preview-thumbnail">
-      <div class="gutter-small">
-        <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" /></a>
-      </div>
-      <div class="gutter-small">
-        <a onclick="preview_kamboyo();"><img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" /></a>
-      </div>
-      <div class="gutter-small">
-        <a onclick="preview_masthulele();"><img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" /></a>
-      </div>
-      <div class="gutter-small">
-        <a onclick="preview_one_ton();"><img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" /></a>
-      </div>
-      <div class="gutter-small">
-        <a onclick="preview_satao();"><img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" /></a>
-      </div>
-      <div class="gutter-small">
-        <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" /></a>
-      </div>
-      <div class="gutter-small">
-        <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" /></a>
+  <div class="clear-bottom preview-thumbnail" id="preview-thumbnail">
+    <section class="single">
+      <div class="gutter-small clear-top polyptych ptych-fixed">
+
+        <div class="gutter-small">
+          <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" /></a>
+        </div>
+        <div class="gutter-small">
+          <a onclick="preview_kamboyo();"><img alt="Last of the Big Tuskers &ndash; Kamboyo [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" /></a>
+        </div>
+        <div class="gutter-small">
+          <a onclick="preview_masthulele();"><img alt="Last of the Big Tuskers &ndash; Masthulele [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" /></a>
+        </div>
+        <div class="gutter-small">
+          <a onclick="preview_one_ton();"><img alt="Last of the Big Tuskers &ndash; One Ton [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" /></a>
+        </div>
+        <div class="gutter-small">
+          <a onclick="preview_satao();"><img alt="Last of the Big Tuskers &ndash; Satao [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" /></a>
+        </div>
+        <div class="gutter-small">
+          <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" /></a>
+        </div>
+        <div class="gutter-small">
+          <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig [preview]" class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" /></a>
+        </div>
       </div>
 
-    </div>
-    <p class="gutter-side text-right"><i>Magnificent Seven</i> (digital paint, 2018) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+    </section>
 
-  </section>
+  </div>
 
   <div class="clear-alt color">
 
