--- a/champion/index.html
+++ b/champion/index.html
@@ -60,15 +60,15 @@
           <h5>2023</h5>
 
           <h5 class="linebreak small"><i>Journalism, Photo-journalism</i></h5>
-          <li><a href="../url/-com/bryanchristy/" title="" target="_blank">Brian Christy</a> &middot; Investigative journalist and founder of National Geographic Special Investigations.</li>
-          <li><a href="../url/-com/brentstirton/" title="" target="_blank" rel="noopener">Brent Stirton</a> &middot; Photographer, notably for National Geographic Magazine.</li>
+          <h5><a href="../url/-com/bryanchristy/" title="" target="_blank">Brian Christy</a> <b>&middot;</b> Investigative journalist and founder of National Geographic Special Investigations</h5>
+          <h5><a href="../url/-com/brentstirton/" title="" target="_blank" rel="noopener">Brent Stirton</a> <b>&middot;</b> Photographer, notably for National Geographic Magazine</h5>
           <p>Recognized for investigative journalism, in particular, documenting the illegal trade in ivory.</p>
           <p><font class="fr">Reconnu pour journalisme, documentant notamment le commerce ill&eacute;gal de l'ivoire.</font></p>
 
           <h5 class=" linebreak small"><i>Journalism</i></h5>
-          <li><a href="../url/-com/jeffreybarbee/" title="" target="_blank">Jeffrey Barbee</a> &middot; Investigative journalist, notably for National Geographic <i>Wildlife Watch</i>.</li>
-          <li><a href="../url-com/laurelneme/" title="" target="_blank">Laurel A Neme</a> &middot; Investigative journalist, notably for National Geographic <i>Wildlife Watch</i>.</li>
-          <p>Recognized for investigative journalism, in particular, reporting reconnaissance in the Kavango basin.</p>
+          <h5><a href="../url/-com/jeffreybarbee/" title="" target="_blank">Jeffrey Barbee</a> <b>&middot;</b> Investigative journalist, notably for National Geographic <i>Wildlife Watch</i></h5>
+          <h5><a href="../url-com/laurelneme/" title="" target="_blank">Laurel A Neme</a> <b>&middot;</b> Investigative journalist, notably for National Geographic <i>Wildlife Watch</i></h5>
+          <p>Recognized for investigative journalism, in particular, reporting on reconnaissance in the Kavango basin.</p>
           <p><font class="fr">Reconnu pour journalisme, notamment des reportages de reconnaissance dans le bassin du Kavango.</font></p>
 
         </ul>
@@ -84,12 +84,12 @@
           <h5>2022</h5>
 
           <h5 class="linebreak small"><i>Arts, Sciences</i></h5>
-          <li>Thalefang Charles &middot; Photographer and storyteller, Botswana &ndash; <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a>.</li>
+          <h5>Thalefang Charles <b>&middot;</b> Photographer and storyteller, Botswana &ndash; <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a></h5>
           <p>Recognized for his chronicles of Indigenous knowledge across the Okavango Delta.</p>
           <p><font class="fr">Reconnu pour ses chroniques du savoir autochtones &agrave; travers le delta de l'Okavango.</font></p>
 
           <h5 class="linebreak small"><i>Arts, Sciences</i></h5>
-          <li>Rolf Steinmann &middot; Wildlife cinematographer, <a href="../url/vimeo/148059977/" title="" target="_blank">In Between</a> (short film, 2015).</li>
+          <h5>Rolf Steinmann <b>&middot;</b> Wildlife cinematographer, <a href="../url/vimeo/148059977/" title="" target="_blank">In Between</a> (short film, 2015)</h5>
           <p>Recognized for cinematography of wildlife in the Arctic, Antarctic and in between.</p>
           <p><font class="fr">Reconnu pour la cin&eacute;matographie de la nature dans l'Arctique et l'Antarctique.</font></p>
 
@@ -106,16 +106,16 @@
           <h5>2021</h5>
 
           <h5 class="linebreak small"><i>Arts</i></h5>
-          <li>Dr Anne Christine Innis Dagg, CM &middot; Zoologist and author, <a href="../url/-org/anneinnisdaggfoundation/" title="Anne Innis Dagg Foundation" target="_blank">Anne Innis Dagg Foundation</a>.</li>
+          <h5>Dr Anne Christine Innis Dagg, CM <b>&middot;</b> Zoologist and author, <a href="../url/-org/anneinnisdaggfoundation/" title="Anne Innis Dagg Foundation" target="_blank">Anne Innis Dagg Foundation</a></h5>
           <p>Recognized for her foundational research of giraffes.</p>
           <p><font class="fr">Reconnue pour ses recherches fondamentales sur les girafes.</font></p>
 
           <h5 class="linebreak small"><i>Sciences</i></h5>
-          <li>Dr Monica L Bond &middot; Wildlife biologist and co-founder of <a href="../url/-org/wildnatureinstitute/" title="Wild Nature Institute" target="_blank">Wild Nature Institute</a>.</li>
-          <li>Dr Derek E Lee &middot; Wildlife biologist and co-founder of Wild Nature Institute.</li>
-          <!-- <li>James Madeli &middot; Research coordinator for Wild Nature Institute.</li> -->
-          <!-- <li>Veila Makundi &middot; Anne Innis Dagg Foundation coordinator for Wild Nature Institute.</li> -->
-          <!-- <li>Robert Godson Mollel &middot; Partner of Wild Nature Institute</li> -->
+          <h5>Dr Monica L Bond <b>&middot;</b> Wildlife biologist and co-founder of <a href="../url/-org/wildnatureinstitute/" title="Wild Nature Institute" target="_blank">Wild Nature Institute</a></h5>
+          <h5>Dr Derek E Lee <b>&middot;</b> Wildlife biologist and co-founder of Wild Nature Institute</h5>
+          <!-- <h5>James Madeli <b>&middot;</b> Research coordinator for Wild Nature Institute</h5> -->
+          <!-- <h5>Veila Makundi <b>&middot;</b> Anne Innis Dagg Foundation coordinator for Wild Nature Institute</h5> -->
+          <!-- <h5>Robert Godson Mollel <b>&middot;</b> Partner of Wild Nature Institute</h5> -->
           <p>Recognized for scientific research of Maasai giraffes in Tanzania.</p>
           <p><font class="fr">Reconnu pour la recherche scientifique sure les girafes en Tanzanie.</font></p>
 
@@ -132,15 +132,15 @@
           <h5>2020</h5>
 
           <h5 class="linebreak small"><i>Arts</i></h5>
-          <li><a href="../url/x/paulakahumbu/" title="X / Paula Kahumbu" target="_blank" rel="noopener">Dr Paula Kahumbu</a> &middot; President of Wildlife Direct assumed office in 2007</li>
+          <h5><a href="../url/x/paulakahumbu/" title="X / Paula Kahumbu" target="_blank" rel="noopener">Dr Paula Kahumbu</a> <b>&middot;</b> President of Wildlife Direct assumed office in 2007</h5>
           <p>Recognized for her role in shining a light on wildlife conservation in Kenya.</p>
           <p><font class="fr">Reconnue pour son r&ocirc;le dans la conservation de la nature au Kenya.</font></p>
 
           <h5 class="linebreak small"><i>Sciences</i></h5>
-          <li>Dr Rutledge (Steve) Boyes &middot; Founder of <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a> in partnership with <a href="../url/-org/nationalgeographic-okavango/" title="National Geographic / Okavango Wilderness Project" target="_blank" rel="noopener">NGOWP</a>.</li>
-          <li>Adjany Costa &middot; Angolan minister of Culture, Tourism, Environment appointed April 2020.</li>
-          <li>Kerllen Costa &middot; Program director of NGOWP Angola assumed office April 2020.</li>
-          <!-- <li>Koketso Mookodi &middot; Program director of NGOWP Botswana.</li> -->
+          <h5>Dr Rutledge (Steve) Boyes <b>&middot;</b> Founder of <a href="../url/-com/wildbirdtrust-okavango-wilderness-project/" title="Wild Bird Trust / Okavango Wilderness Project" target="_blank" rel="noopener">Wild Bird Trust</a> in partnership with <a href="../url/-org/nationalgeographic-okavango/" title="National Geographic / Okavango Wilderness Project" target="_blank" rel="noopener">NGOWP</a></h5>
+          <h5>Adjany Costa <b>&middot;</b> Angolan minister of Culture, Tourism, Environment appointed April 2020</h5>
+          <h5>Kerllen Costa <b>&middot;</b> Program director of NGOWP Angola assumed office April 2020</h5>
+          <!-- <h5>Koketso Mookodi <b>&middot;</b> Program director of NGOWP Botswana</h5> -->
           <p>Recognized for leadership and scientific research in the Okavango Delta watershed.</p>
           <p><font class="fr">Reconnu pour la recherche scientifique dans le bassin versant du delta de l'Okavango.</font></p>
 
@@ -157,7 +157,7 @@
           <h5>2019</h5>
 
           <h5 class="linebreak small"><i>Politics</i><font class="fr">&nbsp;&#92;&nbsp;<i>Politique</i></font></h5>
-          <li>Mumilaaq Qaqqaq &middot; Member of Parliament for Nunavut assumed office October 2019.</li>
+          <h5>Mumilaaq Qaqqaq <b>&middot;</b> Member of Parliament for Nunavut assumed office October 2019</h5>
           <p>Recognized for her progressive leadership in Canada.</p>
           <p><font class="fr">Reconnue pour sa direction progressiste au Canada.</font></p>
 
@@ -165,8 +165,8 @@
           <!-- Mumilaaq is now focused on sewing, beading, painting and making her space hers. -->
 
           <h5 class="linebreak small"><i>Sciences</i></h5>
-          <li>Dr Michael John Chase &middot; Elephant ecologist, co-founder of <a href="../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a>.</li>
-          <li>Kelly Landen &middot; Naturalist and photographer, co-founder of Elephants Without Borders.</li>
+          <h5>Dr Michael John Chase <b>&middot;</b> Elephant ecologist, co-founder of <a href="../url/-org/elephantswithoutborders/" title="Elephants Without Borders" target="_blank">Elephants Without Borders</a></h5>
+          <h5>Kelly Landen <b>&middot;</b> Naturalist and photographer, co-founder of Elephants Without Borders</h5>
           <p>Recognized for scientific research of elephants in the Kavango-Zambezi area.</p>
           <p><font class="fr">Reconnu pour la recherche scientifique dans la r&eacute;gion de Kavango-Zambezi.</font></p>
 
@@ -183,12 +183,12 @@
           <h5>2018</h5>
 
           <h5 class="linebreak small"><i>Politics</i><font class="fr">&nbsp;&#92;&nbsp;<i>Politique</i></font></h5>
-          <li><a href="../url/x/debhaalandnm/" title="X / Deb Haaland" target="_blank" rel="noopener">Debra Anne Haaland</a> &middot; Representative of New Mexico assumed office January 2019.</li>
+          <h5><a href="../url/x/debhaalandnm/" title="X / Deb Haaland" target="_blank" rel="noopener">Debra Anne Haaland</a> <b>&middot;</b> Representative of New Mexico assumed office January 2019</h5>
           <p>Recognized for her progressive leadership in America.</p>
           <p><font class="fr">Reconnue pour sa direction progressiste en Am&eacute;rique.</font></p>
 
           <h5 class="linebreak small"><i>Sciences</i></h5>
-          <li>Angela Sheldrick &middot; President of <a href="../url/-org/sheldrickwildlifetrust/" title="Sheldrick Wildlife Trust" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a> assumed office in 2001.</li>
+          <h5>Angela Sheldrick <b>&middot;</b> President of <a href="../url/-org/sheldrickwildlifetrust/" title="Sheldrick Wildlife Trust" target="_blank" rel="noopener">Sheldrick Wildlife Trust</a> assumed office in 2001</h5>
           <p>Recognized for her continued conservation leadership in Kenya.</p>
           <p><font class="fr">Reconnue pour sa poursuite de la conservation au Kenya.</font></p>
 
@@ -199,7 +199,7 @@
           <div class="clear" id="in-mem-2018">
             <h5 class="linebreak"><a onclick="toggle_2018m();">&minus;</a></h5>
             <h5 class="linebreak title">In Memoriam</h5>
-            <p><a href="../url/-org/sheldrickwildlifetrust-dr-dame-daphne-sheldrick-d-b-e-1934-2018/" title="Sheldrick Wildlife Trust / Dame Daphne Sheldrick" target="_blank">Dr Dame Daphne Marjorie Sheldrick</a> (1934-2018) &middot; Founder of Sheldrick Wildlife Trust.</p>
+            <p><a href="../url/-org/sheldrickwildlifetrust-dr-dame-daphne-sheldrick-d-b-e-1934-2018/" title="Sheldrick Wildlife Trust / Dame Daphne Sheldrick" target="_blank">Dr Dame Daphne Marjorie Sheldrick</a> (1934-2018) <b>&middot;</b> Founder of Sheldrick Wildlife Trust.</p>
             <!-- <p>Major David Leslie William Sheldrick, Kenyan farmer and park warden. (1919-1977)</p> -->
             <p>Remembered for her dedication to wilderness and all that it embrases, to the memory of David and the pioneer wardens of national parks in Kenya, and to her family &ndash; and future generations &ndash; so that they may know how it was once upon a time.<font class="fr">&nbsp;&#92;&nbsp;Rappel&eacute;e pour son d&eacute;vouement &agrave; la nature sauvage et &agrave; tout ce qu'elle englobe, &agrave; la m&eacute;moire de David et des gardiens pionniers des parcs nationaux du Kenya, et &agrave; sa famille &ndash; et aux g&eacute;n&eacute;rations futures &ndash; afin qu'ils sachent comment c'&eacute;tait autrefois.</font></p>
 
@@ -218,13 +218,14 @@
           <h5>2017</h5>
 
           <h5 class="linebreak small"><i>Politics</i><font class="fr">&nbsp;&#92;&nbsp;<i>Politique</i></font></h5>
-          <li><a href="../url/x/meganaleslie/" title="X / Megan Leslie" target="_blank" rel="noopener">Megan Anissa Leslie</a> &middot; President of WWF Canada assumed office December 2017.</li>
+          <h5><a href="../url/x/meganaleslie/" title="X / Megan Leslie" target="_blank" rel="noopener">Megan Anissa Leslie</a> <b>&middot;</b> President of WWF Canada assumed office December 2017</h5>
           <p>Recognized for her environmental advocacy in Canada.</p>
           <p><font class="fr">Reconnue pour sa d&eacute;fense de l'environnement au Canada.</font></p>
 
           <h5 class="linebreak small"><i>Sciences</i></h5>
-          <li>Dr Cynthia Jane Moss &middot; Founder of <a href="../url/-org/elephanttrust/" title="Amboseli Trust for Elephants" target="_blank">Amboseli Trust for Elephants</a>.</li>
-          <li>Dr Joyce Hatheway Poole &middot; Co-founder of <a href="../url/-org/elephantvoices/" title="Elephant Voices" target="_blank">Elephant Voices</a>.</li>
+          <h5>Dr Cynthia Jane Moss <b>&middot;</b> Ethologist and founder of <a href="../url/-org/elephanttrust/" title="Amboseli Trust for Elephants" target="_blank">Amboseli Trust for Elephants</a></h5>
+          <h5>Dr Joyce Hatheway Poole <b>&middot;</b> Ethologist and co-founder of <a href="../url/-org/elephantvoices/" title="Elephant Voices" target="_blank">Elephant Voices</a></h5>
+          <h5>Petter Granli <b>&middot;</b> Chief executive officer and co-founder of Elephant Voices</h5>
           <p>Recognized for scientific research of elephants in Kenya.</p>
           <p><font class="fr">Reconnu pour la recherche scientifique sur les &eacute;l&eacute;phants au Kenya.</font></p>
 
@@ -241,13 +242,13 @@
           <h5>2016</h5>
 
           <h5 class="linebreak small"><i>Arts</i></h5>
-          <li>Nick Brandt &middot; Director and photographer, co-founder of <a href="../url/-org/biglife/" title="Big Life Foundation" target="_blank">Big Life Foundation</a>.</li>
-          <li>Richard Bonham &middot; Conservationist, co-founder of Big Life Foundation.</li>
+          <h5>Nick Brandt <b>&middot;</b> Director and photographer, co-founder of <a href="../url/-org/biglife/" title="Big Life Foundation" target="_blank">Big Life Foundation</a></h5>
+          <h5>Richard Bonham <b>&middot;</b> Conservationist, co-founder of Big Life Foundation</h5>
           <p>Recognized for conservation leadership in the Greater Amboseli ecosystem.</p>
           <p><font class="fr">Reconnu pour ses efforts de conservation dans l'&eacute;cosyst&egrave;me Amboseli.</font></p>
 
           <h5 class="linebreak small"><i>Sciences</i></h5>
-          <li>Sir David Frederick Attenborough and BBC Studios Natural History Unit.</li>
+          <h5>Sir David Frederick Attenborough and BBC Studios Natural History Unit</h5>
           <p>Recognized as a voice for the natural world.</p>
           <p><font class="fr">Reconnu comme une voix pour le monde naturel.</font></p>
 
@@ -264,12 +265,12 @@
           <h5>2015</h5>
 
           <h5 class="linebreak small"><i>Arts</i></h5>
-          <li>Robert (Bob) McLellan Bateman, CM &middot; Naturalist and artist, <a href="../url/-org/batemanfoundation/" title="Bateman Foundation" target="_blank">Bateman Foundation</a>.</li>
+          <h5>Robert (Bob) McLellan Bateman, CM <b>&middot;</b> Naturalist and artist, <a href="../url/-org/batemanfoundation/" title="Bateman Foundation" target="_blank">Bateman Foundation</a></h5>
           <p>Recognized for his artwork to conserve nature in Canada.</p>
           <p><font class="fr">Reconnu pour ses &oelig;uvres visant &agrave; pr&eacute;server la nature au Canada.</font></p>
 
           <h5 class="linebreak small"><i>Sciences</i></h5>
-          <li>Dr Dame Jane Morris Goodall &middot; Primatologist and anthropologist, <a href="../url/-org/janegoodall/" title="Jane Goodall Institute" target="_blank">Jane Goodall Institute</a>.</li>
+          <h5>Dr Dame Jane Morris Goodall <b>&middot;</b> Primatologist and anthropologist, <a href="../url/-org/janegoodall/" title="Jane Goodall Institute" target="_blank">Jane Goodall Institute</a></h5>
           <p>Recognized for her advocacy to conserve the nature world.</p>
           <p><font class="fr">Reconnue pour sa d&eacute;fense de la conservation de la nature.</font></p>
 
