--- a/conservation/index.html
+++ b/conservation/index.html
@@ -141,7 +141,7 @@
   <footer class="single">
     <div class="quote">
       <p class="small">This list was updated September 2020.<font class="fr">&nbsp;&#92;&nbsp;Cette liste a &eacute;t&eacute; mise &agrave; jour en septembre 2020.</font></p>
-      <p class="linebreak small">Provide details about your wildlife conservation effort on the ground to the press secretary at Animat Habitat [<a href="mailto:press@animathabitat.org" title="Address of the press secretary at Animat Habitat." target="_blank" rel="noopener">press&ndash;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Fournir des d&eacute;tails sur un autre effort de conservation de la nature &agrave; notre attach&eacute; de presse.</font></p>
+      <p class="linebreak small">Provide details about your wildlife conservation effort on the ground to the press secretary at Animat Habitat [<a href="mailto:press@animathabitat.org" title="Address of the press secretary at Animat Habitat." target="_blank">press&ndash;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Fournir des d&eacute;tails sur un autre effort de conservation de la nature &agrave; notre attach&eacute; de presse.</font></p>
 
     </div>
 
