--- a/scene/one/companion-app-beta/index.html
+++ b/scene/one/companion-app-beta/index.html
@@ -67,7 +67,7 @@
         <h5 class="linebreak">Beta App Feedback</h5>
         <p>We welcome your feedback! Your input is invaluable in helping to develop a better experience for everyone who discovers the <i>White Elephant</i> comic book and its companion app later on. If you find any bugs in a beta version of the companion app, or have suggestions for an improvement, please use our dedicated feedback form for beta versions of the companion app: <a href="../../../app/beta/" title="Beta: Companion App Feedback Form" target="_blank">Beta App Feedback Form</a>.</p>
 
-        <p class="linebreak">For anything related to a beta version of the companion app, please feel free to send specific feedback to the beta program development office at Animat Habitat [<a href="mailto:beta@animathabitat.org" title="Address of the beta program development office at Animat Habitat." target="_blank" rel="noopener">beta&ndash;animathabitat.org</a>].</p>
+        <p class="linebreak">For anything related to a beta version of the companion app, please feel free to send specific feedback to the beta program development office at Animat Habitat [<a href="mailto:beta@animathabitat.org" title="Address of the beta program development office at Animat Habitat." target="_blank">beta&ndash;animathabitat.org</a>].</p>
 
       </div>
 
