--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -345,6 +345,9 @@
       <p class="linebreak small"><font class="title">Gilgil</font></p>
       <p class="small"><font class="small">Enduimet (1987-2024)</font></p>
 
+      <p class="linebreak small"><font class="title">Mokogodo</font></p>
+      <p class="small"><font class="small">Nairobi (2022-2024)</font></p>
+
     </div>
 
   </footer>
