--- a/patron/index.html
+++ b/patron/index.html
@@ -111,7 +111,7 @@
 
           <div class="color" id="silver-council">
 
-            <p>For secure wiring instructions, please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Silver%C2%A0Council" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account&ndash;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement s&eacute;curis&eacute;, veuillez contacter le bureau de compte chez Animat Habitat.</font></p>
+            <p>For secure wiring instructions, please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Silver%C2%A0Council" title="Address of the account office at Animat Habitat." target="_blank">account&ndash;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement s&eacute;curis&eacute;, veuillez contacter le bureau de compte chez Animat Habitat.</font></p>
 
           </div>
 
@@ -192,7 +192,7 @@
   <footer class="single">
     <div class="quote">
 
-      <p class="small">Please address any question about donations to the account office at Animat Habitat [<a href="mailto:account@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">account–animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons au bureau do compte chez Animat Habitat.</font></p>
+      <p class="small">Please address any question about donations to the account office at Animat Habitat [<a href="mailto:account@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank">account–animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons au bureau do compte chez Animat Habitat.</font></p>
 
       <p class="linebreak small">Thank you for your support.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre soutien.</font></p>
 
