--- a/scene/one/companion-app-augmented-reality-kit/index.html
+++ b/scene/one/companion-app-augmented-reality-kit/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src createsend.com s.animathabitat.org 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; script-src s.animathabitat.org 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -70,26 +70,4 @@
   </footer>
 
 </body>
-
-<!-- <script type="text/javascript" src="https://s.animathabitat.org/inc/js/createsend-com/copypastesubscribeformlogic.js"></script> -->
-
-<script>
-  // var register_form = document.getElementById( "register" ),
-  //     register_toggle = document.getElementById( "register-toggle" );
-  //
-  // register_form.style.display = "none";
-  //
-  // function toggle_register() {
-  //   if (register_form.style.display == "none") {
-  //     register_form.style.display = "block";
-  //     register_toggle.style.display = "none";
-  //   }
-  //   else {
-  //     register_form.style.display = "none";
-  //     register_toggle.style.display = "block";
-  //   }
-  // };
-
-</script>
-
 </html>
