--- a/scene/one/making-of-ella-2/index.html
+++ b/scene/one/making-of-ella-2/index.html
@@ -57,7 +57,7 @@
 
       </div>
 
-      <div>
+      <!-- <div>
         <div class="color text-center">
 
           <h3 class="linebreak">Help give life to the wild places.</h3>
@@ -78,7 +78,7 @@
 
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
