--- a/scene/one/history-of-elephants-anatomy/index.html
+++ b/scene/one/history-of-elephants-anatomy/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src createsend.com s.animathabitat.org 'unsafe-inline'; style-src fonts.googleapis.com 'self';" /> -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; child-src 'none'; font-src fonts.gstatic.com; img-src via.animathabitat.org 'self'; script-src s.animathabitat.org 'unsafe-inline'; style-src fonts.googleapis.com 'self' 'unsafe-inline';" />
   <!-- <meta name="google" content="notranslate" /> -->
 
   <meta name="author" content="Dane Aleksander" />
@@ -75,10 +75,6 @@
 
         <p class="linebreak">For elephants, tusks are more than an indication of social stature. Elephants need their tusks to survive: to dig for roots and water and so on, to strip bark from trees, to clear pathways, and to defend themselves. Elephants are either left-tusked or right-tusked. The tusk that an elephant uses most will appear a bit more worn down.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
-          <!-- They are pillars of our natural world, both iconic and of great ecological importance.
-
-          They are classified as a ‘keystone species,’ which means they have a disproportionately high impact on the ecosystem relative to their population. One of the most interesting roles elephants play is that of water shaman. They have a unique ability to smell water deep beneath the ground, scouting drinking sources that are invisible to the naked eye. Using their tusks, trunks and feet, they unearth hidden springs that would otherwise be inaccessible to all manner of creatures. Their talent for finding water provides a lifeline to animals great and small, especially as droughts become more severe and rains increasingly unpredictable. -->
-
         <p class="linebreak"><i>No one needs a tusk other than an elephant.</i></p>
 
       </div>
@@ -102,9 +98,7 @@
 
       <div>
         <h3 class="linebreak">What's in the Trunk?</h3>
-        <p>An elephant trunk is an extension of the upper lip and nose. This highly adapted olfactory organ has nostrils at the tip through which the elephant can breath, has a highly developed sense of smell and sense of touch, and gives the elephants a flexibility to manipulate the world around them.
-
-          <sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
+        <p>An elephant trunk is an extension of the upper lip and nose. This highly adapted olfactory organ has nostrils at the tip through which the elephant can breath, has a highly developed sense of smell and sense of touch, and gives the elephants a flexibility to manipulate the world around them.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
 
         <p class="linebreak">Elephants have six times as many facial nerve cells as humans, half of which control their complex trunk muscles. Elephants have more than forty <s>up to 150</s> thousand muscles in their trunk. An elephant trunk, or proboscis, for which the order of the elephantidae family genus &ndash; proboscidea &ndash; is named, contains sixteen larger muscles for major movements, such as raising the trunk. Thousands of smaller muscle fascicles, or bundles of muscle fibres, allow for finer movements of the trunk. African elephants have two finger-like projections at the tip of the trunk, which they can use to pick grass, leaves and fruit.<sup>&nbsp;[<a class="button" onclick="fn();" title="Elephant Aid International">1</a>]</sup></p>
 
@@ -178,8 +172,6 @@
       <div>
         <p>African elephant ears appear to resemble the shape of the African continent. This is different from Asian elephant ears which resemble the shape of India in Southwest Asia where they are found. Of course all elephants use their ears to hear. Elephants make &ndash; and listen for &ndash; a range of vocalizations, from high-pitched trumpets to infrasonic rumbles that resonate from miles away. Digital cushions on the soles of their feet indeed sense these distant rumbles, and then the skeletal structures of elephant forelegs and scapulae conduct these as vibrations to the inner ear.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">3</a>]</sup></p>
 
-        <!-- Not only can elephants hear thudding rumbles, but they can pick up the vibration through their feet. Replicas of the airborne rumbles reach elephants through the ground as well. Incredibly, elephants are able to use seismic vibrations at infrasound frequencies to communicate. -->
-
         <p class="linebreak">Elephants will also display their big ears to communicate aggression and submission and so on.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
 
         <p class="linebreak">Elephants display a range of emotions, including demonstrating grief at the loss of herd members. Elephants have visited and revisited the bones of past herd members long after she has passed on, even when the sites happen to fall out of the way. An elephant has a spot on the sides of his or her head, behind each eye, which is at times darkened by the secretion of glands near the temporal lobe. These temporal glands are activated when an elephant is subject to highly charged situational stress or enters into hormonal responses, such as &ldquo;musth&rdquo;.<sup>&nbsp;[<a class="button" onclick="fn_2();" title="Poole and Granli, Elephant Voices">5</a>]</sup></p>
@@ -192,7 +184,7 @@
         <h4><font class="color text-quote">&ldquo;</font><i>Periodically adult male elephants enter a state of heightened aggression, brought about by a condition known as musth, the result of a massive hormone surge. Musth is easily recognized by the dark oily secretion that oozes from the temporal glands on the sides of the head. The glands swell to the size of footballs, and press hard against the back of the eyes, causing considerable pain. The elephants will force their tusks into the ground to relieve pressure, and can sometimes be driven into a frenzy from the pain [&hellip;]. Body temperatures rise, and they flap their ears frequently to keep cool. Ketones flood the brain, altering their states of mind, which results in repetitive behavior. Extra testosterone makes them more aggressive than usual, and limits their ability to function normally. They appear to want to dominate everything in sight [&hellip;]. In the wild, musth helps the elephant to maintain his dominant position and meet with females who are in season.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Steve Bloom, <i>Elephants</i>, &lsquo;Body and Mind&rsquo; (book, 2006), Chronicle Books LLC</font></h4>
 
         <!-- attacking randomly -->
-        <!-- , including humans, and the danger of such a state should never be underestimated -->
+        <!-- including humans, and the danger of such a state should never be underestimated -->
 
       </div>
 
@@ -219,27 +211,26 @@
         </div>
       </div>
 
-      <div class="clear">
-        <div id="register-toggle">
-          <h3><a onclick="toggle_register();">&plus;</a></h3>
+      <div>
+        <div class="color text-center">
 
-        </div>
+          <h3 class="linebreak">Help give life to the wild places.</h3>
+          <h5>You can support Animat Habitat in a few ways.</h5>
 
-        <div class="clear toggle-off" id="register" spellcheck="false">
-          <div>
-            <h3><a onclick="toggle_register();">&minus;</a></h3><h3>Behind-the-scenes&hellip;</h3>
-            <p>Register your name and address to get behind-the-scenes of <i>White Elephant</i>.</p>
+          <div class="triptych">
+            <div class="gutter-small">
+              <a href="../../../patron/" title="Animat Habitat patrons." target="_blank"><button class="text-center title">Donate</button></a>
+            </div>
+
+            <div class="gutter-small">
+              <a href="../../../boutique/" title="Animat Habitat boutique." target="_blank"><button class="text-center title">Shop</button></a>
+            </div>
+
+            <div class="gutter-small">
+              <a href="../../../rss/" title="Animat Habitat broadcast." target="_blank"><button class="text-center title">Subscribe</button></a>
+            </div>
 
           </div>
-
-          <form class="js-cm-form" id="subForm" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="92D4C54F0FEC16E5ADC2B1904DE9ED1A52FB6D182F7A8A669AB1C317E182AD3763A1B775C7C4E900069B5F6BE1E4B7A7B42258404945BDA2B8796E1BC8516FAF">
-
-            <div class="clear-top"><input aria-label="Name" id="fieldName" maxlength="140" name="cm-name" title="Full name" placeholder="Name" onfocus="if (this.value=='Name') this.value = ''"></div>
-
-            <div class="clear-top"><input autocomplete="Email" aria-label="Email" class="js-cm-email-input qa-input-email matte-thin" id="fieldEmail" maxlength="140" name="cm-dliyu-dliyu" required="" type="email" placeholder="E-mail address" onfocus="if (this.value=='E-mail address') this.value = ''" title="E-mail address required."><button type="submit">Register</button></div>
-
-          </form>
-
         </div>
       </div>
 
@@ -265,24 +256,7 @@
 
 </body>
 
-<script type="text/javascript" src="https://s.animathabitat.org/inc/js/createsend-com/copypastesubscribeformlogic.js"></script>
-
 <script>
-  var register_form = document.getElementById( "register" ),
-      register_toggle = document.getElementById( "register-toggle" );
-
-  register_form.style.display = "none";
-
-  function toggle_register() {
-    if (register_form.style.display == "none") {
-      register_form.style.display = "block";
-      register_toggle.style.display = "none";
-    }
-    else {
-      register_form.style.display = "none";
-      register_toggle.style.display = "block";
-    }
-  };
 
   function fn() { document.querySelector( "#footnotes" ).scrollIntoView({ behavior: 'smooth' }); };
   function fn_2() { document.querySelector( "#footnotes-2" ).scrollIntoView({ behavior: 'smooth' }); };
