--- a/scene/one/history-of-elephants-ivory/index.html
+++ b/scene/one/history-of-elephants-ivory/index.html
@@ -466,6 +466,17 @@
 
 <script>
 
+  document.onload = load_createsend();
+
+  function load_createsend() {
+
+    var script = document.createElement( "script" );
+    script.src = "https://s.animathabitat.org/inc/js/createsend-com/copypastesubscribeformlogic.js";
+    script.type = "text/javascript";
+
+    document.body.appendChild(script);
+  };
+
   var toggle_1 = document.getElementById("loophole"),
       toggle_1_a = document.getElementById("loophole-a"),
       request_form = document.getElementById( "request" ),
